<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="bottom"
    tools:context="com.darwishashraf.flashchatnewfirebase.LoginActivity">

    <com.hanks.htextview.scale.ScaleTextView
        android:id="@+id/text_view_scale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="24dp" />


    <ImageView
        android:layout_width="316dp"
        android:layout_height="194dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/chat_logo" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <AutoCompleteTextView
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textIsSelectable="false" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@integer/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_sign_in_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/green"
        android:onClick="signInExistingUser"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_register_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:onClick="registerNewUser"
        android:text="@string/action_register"
        android:textColor="@color/green"
        android:textStyle="bold" />

</LinearLayout>
